@@ -1,11 +1,12 @@
 package project.libraryManagement.security;
 
 import org.springframework.security.core.GrantedAuthority;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 import project.libraryManagement.domain.Member;
 
 import java.util.Collection;
-import java.util.Collections;
+import java.util.List;
 
 public class MemberDetails implements UserDetails {
     private final Member member;
@@ -16,7 +17,7 @@ public class MemberDetails implements UserDetails {
 
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        return Collections.emptyList(); // 권한 없이 처리
+        return List.of(new SimpleGrantedAuthority("ROLE_" + member.getRole().name()));
     }
 
     @Override
